// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBg should match a snapshot 1`] = `
<body>
  <div>
    <mock-styled.div>
      Content within modal
    </mock-styled.div>
  </div>
</body>
`;

exports[`ModalBody should match a snapshot 1`] = `
<DocumentFragment>
  <mock-styled.div>
    Content within modal
  </mock-styled.div>
</DocumentFragment>
`;

exports[`ModalContainer should match a snapshot 1`] = `
<DocumentFragment>
  <mock-styled.div>
    Content within modal
  </mock-styled.div>
</DocumentFragment>
`;

exports[`ModalFooter should match a snapshot 1`] = `
<DocumentFragment>
  <mock-styled.div>
    Content within modal
  </mock-styled.div>
</DocumentFragment>
`;

exports[`ModalHeader should match a snapshot 1`] = `
<DocumentFragment>
  <mock-styled.div>
    Content within modal
  </mock-styled.div>
</DocumentFragment>
`;
